# Parade-State-Bot

./: .env.example  .gitignore  README.md  bot.py  claude.md  pyproject.toml  random.md
.claude/: settings.local.json
ai_docs/: claude_history.txt  example.txt  logic_google_sheets.md  technical_plan.md
app/: config.py  main.py
app/models/: parade_state.py  staff.py
app/services/: __init__.py  bot_handler.py  google_sheets.py  message_builder.py  telegram_service.py
app/utils/: date_helpers.py
parade-state-bot/: Dockerfile  Pipfile  README.md  docker-compose.yml  requirements.txt  setup.py
parade-state-bot/app/: config.py  main.py
parade-state-bot/app/models/: duty.py  parade_state.py  staff.py
parade-state-bot/app/services/: __init__.py  google_sheets.py  message_builder.py  telegram.py
parade-state-bot/app/utils/: date_helpers.py  formatters.py
parade-state-bot/docs/: google_sheets_implementation.md
